--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "./node_modules/.bin/webpack-dev-server --progress --colors",
     "build": "./node_modules/.bin/webpack -p"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "Nathan Ziarek",
   "license": "ISC",
   "devDependencies": {
@@ -24,6 +24,7 @@
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "susy": "^2.2.9",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
